--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
 </section>
 
 <section id="mouseStatistics" class="hidden">
-    <div class="section-title"><h2></h2></div>
+    <div class="section-title"><h2 class="hidden">Mouse statistics</h2></div>
     <?php foreach ($mouseStatistics as $k => $v) { ?>
         <?php $details = json_decode($v->details) ?>
         <?php $h = (1.0 - $v->counter) * 240; ?>
