--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
                 <?= isset($_SESSION['user']) ? '<li class="nav-item"><a id="logout_button" class="nav-link btn-default logout">Logout</a></li>' : '<li class="nav-item"><a id="login_button" class="nav-link btn-default login">Login</a></li>' ?>
             </ul>
         </div>
+        <div class="hamburger"><i class="fa fa-bars"></i></div>
     </div>
 </nav>
 
